# Ubuntu-AI-Bias-Auditing

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py  ui_icons.py
src/dat_framework/: config.py  pipeline.py
src/dat_framework/data/: synthetic_dhs.py  worldbank.py
src/dat_framework/metrics/: fairness_metrics.py  stats_tests.py
src/dat_framework/optimization/: audit_log.py  drift_monitoring.py  moo_engine.py  pareto.py  preprocessing.py
tests/: test_pipeline_smoke.py
